Put in guards so we don't try to fetch news from any source if we already have today's news from that source.  This saves cost in local dev and also in prod.  Previously in prod a deployment or any app restart would re-fetch today's news.